# gnu_woodchuck

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  analyze-db.sh  btree.c  btree.h  config.h.in  configure.ac  debug.c  debug.h  files.c  files.h  glib.h  list.h  pidfile.c  smart-storage-logger.c  smart-storage-simulator.c  sqlq.c  ssl-receiver.cert  ssl-receiver.py  ssl-tail.c  uploader.c  uploader.h  util.h
clients/: Makefile.am  apt-woodchuck.py  apt-woodchuck.sh  apt-woodchuck.sudoers.in  org.woodchuck.apt-woodchuck.service.in  org.woodchuck.vcssync.service.in  vcssync.py  vcssync.sh  woodchuck-cli.py  woodchuck-cli.sh
data/: Makefile.am  ssl-receiver.cert
debian/: apt-woodchuck.install  apt-woodchuck.postinst  changelog  control  libgwoodchuck.install  murmeltier-maemo.upstart  murmeltier.install  murmeltier.postinst  murmeltier.prerm  pywoodchuck.install  rules  smart-storage-logger-maemo.upstart  smart-storage-logger.install  smart-storage-logger.postinst  smart-storage-logger.prerm  smart-storage-logger.upstart  vcssync.install  woodchuck-doc.install  woodchuck.png.base64  woodchuck.png.credit
doc/: Makefile.am  conf.py  dbus2rst.py  org.woodchuck.object.rst  org.woodchuck.rst  org.woodchuck.upcall.rst  woodchuck.rst
doc/html/: genindex.html  objects.inv  org.woodchuck.html  org.woodchuck.manager.html  org.woodchuck.object.html  org.woodchuck.stream.html  org.woodchuck.upcall.html  py-modindex.html  search.html  searchindex.js  woodchuck.html
doc/html/_sources/: org.woodchuck.manager.txt  org.woodchuck.stream.txt  woodchuck.txt
include/: Makefile.am
include/netczar/: action.h  netczar.h  schedule.h
include/woodchuck/: gwoodchuck.h  woodchuck.h
maemo/: README  apt-woodchuck.install  htaccess  smart-storage-logger.install  woodchuck.install
src/: 98murmeltier-xsession.sh.in  Makefile.am  Phone.Net.xml  README  battery-monitor.c  battery-monitor.h  com.nokia.dsme.signal.xml  com.nokia.icd2.xml  com.nokia.mce.request.xml  com.nokia.mce.signal.xml  dbus-util.h  debug.c  debug.h  dotdir.c  dotdir.h  files.c  files.h  gwoodchuck.c  http_header.py  ll-networking-linux.c  ll-networking-linux.h  logger-uploader.c  logger.c  marshal.list  murmeltier-dbus-server.c  murmeltier-dbus-server.h  murmeltier.c  netczar.c  network-monitor-icd2.c  network-monitor-nm.c  network-monitor.c  network-monitor.h  org.freedesktop.ConsoleKit.xml  org.freedesktop.DBus.Introspectable.xml  org.freedesktop.DBus.Properties.xml  org.freedesktop.DBus.xml  org.freedesktop.Hal.Device.xml  org.freedesktop.Hal.Manager.xml  org.freedesktop.NetworkManager.AccessPoint.xml  org.freedesktop.NetworkManager.Connection.Active.xml  (+41 more)
