EXTRA_DIST = debian/rules debian/changelog debian/compat debian/control \
	debian/copyright debian/smart-storage-logger-maemo.upstart \
	debian/smart-storage-logger.upstart \
	debian/smart-storage-logger.postinst \
	debian/smart-storage-logger.prerm \
	debian/murmeltier-maemo.upstart \
	debian/murmeltier.postinst \
	debian/murmeltier.prerm \
	debian/libgwoodchuck-dev.install \
	debian/libgwoodchuck.install \
	debian/murmeltier.install \
	debian/pywoodchuck.install \
	debian/smart-storage-logger.install \
	debian/woodchuck-doc.install \
	\
	maemo/README maemo/htaccess maemo/smart-storage-logger.install

SUBDIRS = src data include doc
