# Copyright (C) 2011 Neal H. Walfield <neal@walfield.org>
#
# Woodchuck is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 3, or (at
# your option) any later version.
#
# Woodchuck is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see
# <http://www.gnu.org/licenses/>.

EXTRA_DIST = debian/rules debian/changelog debian/compat debian/control \
	debian/copyright debian/smart-storage-logger-maemo.upstart \
	debian/smart-storage-logger.upstart \
	debian/smart-storage-logger.postinst \
	debian/smart-storage-logger.prerm \
	debian/murmeltier-maemo.upstart \
	debian/murmeltier.postinst \
	debian/murmeltier.prerm \
	debian/libgwoodchuck-dev.install \
	debian/libgwoodchuck.install \
	debian/murmeltier.install \
	debian/pywoodchuck.install \
	debian/smart-storage-logger.install \
	debian/woodchuck-doc.install \
	debian/vcssync.install \
	debian/apt-woodchuck.install \
	debian/apt-woodchuck.postinst \
	\
	maemo/README maemo/htaccess maemo/smart-storage-logger.install \
	maemo/woodchuck.install \
	maemo/apt-woodchuck.install

SUBDIRS = src clients data include doc
